--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,11 +19,11 @@
 
         /* Header */
         header {
-            background: #fff;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            /* background: #fff; */
+            /* box-shadow: 0 2px 10px rgba(0,0,0,0.1); */
             position: fixed;
             width: 100%;
-            top: 0;
+            top: 5px;
             z-index: 1000;
         }
 
